NextGenAppPackage/main/default/objects/Account/fields/contains_yaveh__c.field-meta.xml
<CustomField>
    <fullName>contains_yaveh__c</fullName>
    <formula>CONTAINS(Name,&quot;YAVEH&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>contains yaveh</label>
    <type>Checkbox</type>
</CustomField>