NextGenAppPackage/main/default/objects/Account/fields/externalId__c.field-meta.xml
<CustomField>
    <fullName>externalId__c</fullName>
    <externalId>true</externalId>
    <label>externalId</label>
    <length>8</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>