NextGenAppPackage/main/default/objects/Account/fields/pl1__c.field-meta.xml
<CustomField>
    <fullName>pl1__c</fullName>
    <label>pl1</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>v1</fullName>
            </value>
            <value>
                <fullName>v2</fullName>
            </value>
            <value>
                <fullName>v3</fullName>
            </value>
            <value>
                <fullName>v4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>