NextGenAppPackage/main/default/objects/Account/validationRules/Name_does_not_contain_Yaveh.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_does_not_contain_Yaveh</fullName>
    <active>true</active>
    <errorConditionFormula>and( $Setup.Run_Validation__c.Execute_validation__c ,
 CONTAINS(  Name,&quot;YAVEH&quot; )
)</errorConditionFormula>
    <errorMessage>You can not use Yaveh in the name of an account</errorMessage>
</ValidationRule>